# cinema-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 5992f0244e12_create_models.py  c9d60fa9eae1_add_stripe_payment_columns_to_payments_.py
app/: __init__.py  celery_app.py  main.py
app/config/: __init__.py  dependencies.py  settings.py
app/crud/: __init__.py  auth.py  cart.py  certifications.py  director.py  genres.py  movies.py  orders.py  payments.py  profiles.py  stars.py
app/database/: __init__.py  db_session.py  session_postresql.py  session_sqlite.py
app/database/models/: __init__.py  models.py
app/exceptions/: __init__.py
app/notifications/: email_service.py
app/routes/: __init__.py  accounts.py  cart.py  certifiacations.py  directors.py  genres.py  movies.py  orders.py  profiles.py  stars.py
app/routes/webhooks/: stripe.py
app/schemas/: __init__.py  cart.py  certifications.py  directors.py  genres.py  movies.py  orders.py  profiles.py  stars.py  users.py
app/scripts/: seed_database.py
app/services/: __init__.py  minio_service.py  passwords.py  role_manager.py  stripe_service.py  token_manager.py
app/tasks/: cleanup_tasks.py  email_tasks.py
app/tests/: conftest.py  test_accounts.py  test_cart.py  test_db_connect.py  test_db_integrity.py  test_genres.py  test_movies.py  test_orders.py  test_profile.py
src/: main.py
src/routes/: __init__.py  accounts.py  movies.py
