[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["turulko-oleksandr <sashaturulko@i.ua>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiosmtplib = ">=5.0.0,<6.0.0"
aiosqlite = ">=0.21.0,<0.22.0"
alembic = ">=1.17.0,<2.0.0"
amqp = ">=5.3.1,<6.0.0"
annotated-types = ">=0.7.0,<0.8.0"
anyio = ">=4.11.0,<5.0.0"
argcomplete = ">=3.6.3,<4.0.0"
asyncpg = ">=0.30.0,<0.31.0"
bcrypt = ">=4.1.2,<4.1.3"
billiard = ">=4.2.2,<5.0.0"
cachecontrol = ">=0.14.3,<0.15.0"
celery = ">=5.5.3,<6.0.0"
certifi = ">=2025.10.5,<2026.0.0"
charset-normalizer = ">=3.4.4,<4.0.0"
cleo = ">=2.1.0,<3.0.0"
click = ">=8.3.0,<9.0.0"
click-didyoumean = ">=0.3.1,<0.4.0"
click-plugins = ">=1.1.1.2,<2.0.0.0"
click-repl = ">=0.3.0,<0.4.0"
colorama = ">=0.4.6,<0.5.0"
crashtest = ">=0.4.1,<0.5.0"
distlib = ">=0.4.0,<0.5.0"
dnspython = ">=2.8.0,<3.0.0"
dulwich = ">=0.24.7,<0.25.0"
ecdsa = ">=0.19.1,<0.20.0"
email-validator = ">=2.3.0,<3.0.0"
fastapi = ">=0.120.1,<0.121.0"
fastapi-cli = ">=0.0.14,<0.0.15"
fastapi-cloud-cli = ">=0.3.1,<0.4.0"
fastjsonschema = ">=2.21.2,<3.0.0"
filelock = ">=3.20.0,<4.0.0"
findpython = ">=0.7.0,<0.8.0"
flower = ">=2.0.1,<3.0.0"
greenlet = ">=3.2.4,<4.0.0"
h11 = ">=0.16.0,<0.17.0"
httpcore = ">=1.0.9,<2.0.0"
httptools = ">=0.7.1,<0.8.0"
httpx = ">=0.28.1,<0.29.0"
humanize = ">=4.14.0,<5.0.0"
idna = ">=3.11,<4.0"
iniconfig = ">=2.3.0,<3.0.0"
itsdangerous = ">=2.2.0,<3.0.0"
jaraco-classes = ">=3.4.0,<4.0.0"
jaraco-context = ">=6.0.1,<7.0.0"
jaraco-functools = ">=4.3.0,<5.0.0"
jinja2 = ">=3.1.6,<4.0.0"
keyring = ">=25.6.0,<26.0.0"
kombu = ">=5.5.4,<6.0.0"
mako = ">=1.3.10,<2.0.0"
markdown-it-py = ">=4.0.0,<5.0.0"
markupsafe = ">=3.0.3,<4.0.0"
mdurl = ">=0.1.2,<0.2.0"
more-itertools = ">=10.8.0,<11.0.0"
msgpack = ">=1.1.2,<2.0.0"
orjson = ">=3.11.4,<4.0.0"
packaging = ">=25.0,<26.0"
passlib = ">=1.7.4,<2.0.0"
pillow = ">=12.0.0,<13.0.0"
pkginfo = ">=1.12.1.2,<2.0.0.0"
platformdirs = ">=4.5.0,<5.0.0"
pluggy = ">=1.6.0,<2.0.0"
prometheus-client = ">=0.23.1,<0.24.0"
prompt-toolkit = ">=3.0.52,<4.0.0"
psycopg2-binary = ">=2.9.11,<3.0.0"
pyasn1 = ">=0.6.1,<0.7.0"
pydantic = ">=2.12.3,<3.0.0"
pydantic-extra-types = ">=2.10.6,<3.0.0"
pydantic-settings = ">=2.11.0,<3.0.0"
pydantic-core = ">=2.41.4,<3.0.0"
pygments = ">=2.19.2,<3.0.0"
pyproject-hooks = ">=1.2.0,<2.0.0"
python-dateutil = ">=2.9.0.post0,<3.0.0"
python-dotenv = ">=1.2.1,<2.0.0"
python-jose = ">=3.5.0,<4.0.0"
python-multipart = ">=0.0.20,<0.0.21"
pytz = ">=2025.2,<2026.0"
pywin32-ctypes = ">=0.2.3,<0.3.0"
pyyaml = ">=6.0.3,<7.0.0"
rapidfuzz = ">=3.14.1,<4.0.0"
redis = ">=7.0.1,<8.0.0"
requests = ">=2.32.5,<3.0.0"
requests-toolbelt = ">=1.0.0,<2.0.0"
rich = ">=14.2.0,<15.0.0"
rich-toolkit = ">=0.15.1,<0.16.0"
rignore = ">=0.7.1,<0.8.0"
rsa = ">=4.9.1,<5.0.0"
sentry-sdk = ">=2.42.1,<3.0.0"
shellingham = ">=1.5.4,<2.0.0"
six = ">=1.17.0,<2.0.0"
sniffio = ">=1.3.1,<2.0.0"
sqlalchemy = ">=2.0.44,<3.0.0"
starlette = ">=0.48.0,<0.49.0"
stripe = ">=13.0.1,<14.0.0"
tomlkit = ">=0.13.3,<0.14.0"
tornado = ">=6.5.2,<7.0.0"
trove-classifiers = ">=2025.9.11.17,<2026.0.0.0"
typer = ">=0.20.0,<0.21.0"
typing-inspection = ">=0.4.2,<0.5.0"
typing-extensions = ">=4.15.0,<5.0.0"
tzdata = ">=2025.2,<2026.0"
ujson = ">=5.11.0,<6.0.0"
urllib3 = ">=2.5.0,<3.0.0"
userpath = ">=1.9.2,<2.0.0"
uvicorn = ">=0.38.0,<0.39.0"
vine = ">=5.1.0,<6.0.0"
watchfiles = ">=1.1.1,<2.0.0"
wcwidth = ">=0.2.14,<0.3.0"
websockets = ">=15.0.1,<16.0.0"
zstandard = ">=0.25.0,<0.26.0"
minio = ">=7.2.18,<8.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.2,<9.0.0"
pytest-asyncio = ">=1.2.0,<2.0.0"
pytest-mock = ">=3.15.1,<4.0.0"
flake8 = ">=7.3.0,<8.0.0"
black = ">=25.9.0,<26.0.0"
isort = ">=7.0.0,<8.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<4.0.0"]
build-backend = "poetry.core.masonry.api"
